--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- include partials/header.ejs %> 
     
     <h1>Memory description</h1>
-    <form action="">
-        <input type="number" placeholder="Memory size" autofocus>
-        <input type="number" placeholder="Holes number" autofocus>
+    <form id="main_form">
+        <input type="number" id="memory_size" placeholder="Memory size" autofocus>
+        <input type="number" id="holes_number" placeholder="Holes number" autofocus>
         <button type="submit">next</button>
     </form>
-
+    <p></p>
 <%- include partials/footer.ejs %>
