add holes info, to be continued

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,4 +7,12 @@
         <button type="submit">next</button>
     </form>
     <p></p>
+    <div class="add_holes">
+        <h1>Add holes</h1>
+        <form id="add_holes">
+            <input type="number" id="hole_base" placeholder="The hole base" autofocus>
+            <input type="number" id="hole_size" placeholder="The hole size" autofocus>
+            <button type="submit">next</button>
+        </form>
+    </div>
 <%- include partials/footer.ejs %>
