--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,11 @@
     <p></p>
     <div class="add_holes">
         <h1>Add holes</h1>
+        <h2 id="holes_header">Hole<span id="hole_num">1</span></h2>
         <form id="add_holes">
             <input type="number" id="hole_base" placeholder="The hole base" autofocus>
             <input type="number" id="hole_size" placeholder="The hole size" autofocus>
-            <button type="submit">next</button>
+            <button type="submit" id="holes_submit">next</button>
         </form>
     </div>
 <%- include partials/footer.ejs %>
