input handling, to be continued

--- a/views/css/index.css
+++ b/views/css/index.css
@@ -1,13 +1,101 @@
 /* global rules */
 * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+}
+
+body {
+  overflow: hidden;
 }
 
 /* add holes */
-.add_holes{
-    display: none;
+.forms {
+  position: relative;
 }
+
+.memory {
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  width: 100vw;
+}
+
+.memory form {
+  width: 70%;
+  margin: 10px auto;
+}
+
+.holes {
+  position: absolute;
+  width: 100vw;
+  top: 10px;
+  left: 100vw;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.holes form {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.processes_num {
+  position: absolute;
+  width: 100vw;
+  top: 10px;
+  left: 100vw;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.processes_num form {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.processes {
+  position: absolute;
+  width: 100vw;
+  top: 10px;
+  left: 100vw;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.processes form {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.segments_info {
+  display: none;
+}
+
+.header, .subheader {
+  width: 100%;
+  text-align: center;
+  position: static;
+}
+
+input {
+  display: block;
+  margin: 10px auto;
+  padding: 0.5em;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+button {
+  display: block;
+  width: 85px;
+  height: 25px;
+  margin: 10px auto;
+  color: black;
+}
+/*# sourceMappingURL=index.css.map */
