--- a/views/scss/index.scss
+++ b/views/scss/index.scss
@@ -59,6 +59,18 @@ body{
     }
 }
 
+.results{
+    position: absolute;
+    width: 100vw;
+    top: 10px;
+    left: 100vw;
+    transition: 0.3s;
+    & form{
+        width: 70%;
+        margin: 0 auto;
+    }
+}
+
 .segments_info{
     display: none;
 }
@@ -87,4 +99,18 @@ button{
     height: 25px;
     margin: 10px auto;
     color: black;
+}
+
+#segments_number_submit{
+    display: block;
+    width: 85px;
+    height: 25px;
+    margin: 10px auto;
+    color: black;
+    background-color: #eee;
+    text-decoration: none;
+    border: 1px solid black;
+    text-align: center;
+    font-size: 14px;
+    padding-top: 4px;
 }
