--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
             <form class="memory form" id="main_form">
                 <input type="number" id="memory_size" placeholder="Memory size" autofocus>
                 <input type="number" id="holes_number" placeholder="Holes number">
-                <button type="submit">Next</button>
+                <button type="submit" id="memory_submit" disabled>Next</button>
             </form>
         </div>
         <div class="holes">
@@ -16,7 +16,7 @@
             <form class="holes__form" id="add_holes">
                 <input type="number" id="hole_base" placeholder="The hole base" autofocus>
                 <input type="number" id="hole_size" placeholder="The hole size">
-                <button type="submit" id="holes_submit">Next</button>
+                <button type="submit" id="holes_submit" disabled>Next</button>
             </form>
         </div>
         <div class="processes_num">
@@ -43,7 +43,7 @@
             </form>
         </div>
         <div class="results">
-            <p></p>
+            <p>Test</p>
         </div>
     </div>
 <%- include partials/footer.ejs %>
