--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
+        <script src="./js/displayOutput.js"></script>
+        <script src="./js/firstFit.js"></script>
         <script src="./js/formHandlers.js"></script>              
         <script src="./js/index.js"></script>    
     </body>
