Handling empty inputs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
             <h1 class="processes_num header">Enter the number of processes</h1>
             <form id="processes_num">
                 <input type="number" id="processes_number" placeholder="Processes number" autofocus>
-                <button type="submit" id="processes_num_submit">Next</button>
+                <button type="submit" id="processes_num_submit" disabled>Next</button>
             </form>
         </div> <!-- el 7ob kolo -->
         <div class="processes">
@@ -32,13 +32,13 @@
                 <div class="segments_number">
                     <h2 class="processes header">Segments Number</h2>
                     <input type="number" id="segments_number" placeholder="Segments number" autofocus>
-                    <a href="#" id="segments_number_submit">Next</a>
+                    <button type="button" id="segments_number_submit" disabled>Next</button>
                 </div>
                 <div class="segments_info">
                     <h1 class="processes header">Segment <span id="segmenet_cnt">1</span></h1>
                     <input type="text" id="segment_name" placeholder="Segments name" autofocus>
                     <input type="number" id="segment_size" placeholder="Segment size">
-                    <button type="submit" id="segment_submit">Next</button>
+                    <button type="submit" id="segment_submit" disabled>Next</button>
                 </div>
             </form>
         </div>
