--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,17 @@
                 </div>
             </form>
         </div>
-        <div class="results">
+        <div class="select_algo">
+            <h1 class="select_algo header">Select the algorithm</h1>
+            <form id="algo_select">
+                <select id="algorithm">
+                    <option value="1">First fit algorithm</option>
+                    <option value="2">Best fit algorithm</option>
+                  </select>
+                <button type="submit" id="algorithm_submit">Draw</button>
+            </form>
+        </div>
+        <div class="result">
             <p>Test</p>
         </div>
     </div>
