--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,9 @@
-        <script src="./js/displayOutput.js"></script>
+        <script src="./js/stopTransition.js"></script>
+        <script src="./js/preventTabbing.js"></script>
         <script src="./js/firstFit.js"></script>
         <script src="./js/bestFit.js"></script>
+        <script src="./js/displayOutput.js"></script>
+        <script src="./js/drawMemory.js"></script>
         <script src="./js/formHandlers.js"></script>              
         <script src="./js/index.js"></script>    
     </body>
