--- a/views/css/index.css
+++ b/views/css/index.css
@@ -1,6 +1,7 @@
 /* global rules */
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: sans-serif;
@@ -16,10 +17,12 @@ body {
 }
 
 .stop-transition {
+  -webkit-transition: none !important;
   transition: none !important;
 }
 
 .memory {
+  -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
   width: 100vw;
 }
@@ -34,6 +37,7 @@ body {
   width: 100vw;
   top: 10px;
   left: 100vw;
+  -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
 
@@ -47,6 +51,7 @@ body {
   width: 100vw;
   top: 10px;
   left: 100vw;
+  -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
 
@@ -60,6 +65,7 @@ body {
   width: 100vw;
   top: 10px;
   left: 100vw;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -73,6 +79,7 @@ body {
   width: 100vw;
   top: 10px;
   left: 100vw;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -86,6 +93,7 @@ body {
   width: 100vw;
   top: 10px;
   left: 100vw;
+  -webkit-transition: 0.3s;
   transition: 0.3s;
 }
 
@@ -134,4 +142,39 @@ button {
   border: 2px solid black;
   font-size: 1rem;
   padding: 0.5em;
+  position: relative;
 }
+
+.block-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 21px;
+}
+
+.memory-size-top {
+  position: absolute;
+  top: -5px;
+  left: -30px;
+}
+
+.memory-size-bottom {
+  position: absolute;
+  bottom: -10px;
+  left: -50px;
+}
+
+.process {
+  background-color: #0017ffad;
+}
+
+.hole {
+  background-color: #ff10009e;
+}
+
+.old-process {
+  background-color: #eee;
+}
+/*# sourceMappingURL=index.css.map */
