--- a/views/scss/index.scss
+++ b/views/scss/index.scss
@@ -129,4 +129,37 @@ button{
     border: 2px solid black;
     font-size: 1rem;
     padding: 0.5em;
+    position: relative;
+}
+
+.block-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 21px;
+}
+
+.memory-size-top{
+    position: absolute;
+    top: -5px;
+    left: -30px;
+}
+
+.memory-size-bottom{
+    position: absolute;
+    bottom: -10px;
+    left: -50px;
+}
+
+.process{
+    background-color: #0017ffad;
+}
+
+.hole{
+    background-color: #ff10009e;
+}
+
+.old-process{
+    background-color: #eee;
 }
