--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
             </form>
         </div>
         <div class="result">
-            <p>Test</p>
+            <h1 class="result header">Double click to deAllocate</h1>
         </div>
     </div>
 <%- include partials/footer.ejs %>
