--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,6 +4,7 @@
         <script src="./js/bestFit.js"></script>
         <script src="./js/displayOutput.js"></script>
         <script src="./js/drawMemory.js"></script>
+        <script src="./js/deallocate.js"></script>
         <script src="./js/formHandlers.js"></script>              
         <script src="./js/index.js"></script>    
     </body>
