--- a/views/scss/index.scss
+++ b/views/scss/index.scss
@@ -87,6 +87,9 @@ body{
         width: 70%;
         margin: 0 auto;
     }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .segments_info{
@@ -120,9 +123,13 @@ button{
 }
 
 .memory-output{
-    width: 70%;
-    max-width: 400px;
+    flex-basis: 65%;
     margin: 0 auto;
+}
+
+.memory-output h1{
+    text-align: center;
+    margin: 10px;
 }
 
 .memory-block{
@@ -162,4 +169,19 @@ button{
 
 .old-process{
     background-color: #eee;
+}
+
+.memory-warning{
+    flex-basis: 40%;
+    padding: 1em;
+    background-color: #edff008c;
+    border-radius: 20px;
+}
+
+.warning-p{
+    line-height: 1.8;
+    font-size: 16px;
+    font-weight: bold;
+    margin: 5px 0;
+    text-align: center;
 }
