--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include partials/header.ejs %> 
-    
-    
+    <div class="back-button">
+        
+    </div>
     <div class="forms">
         <div class="memory">
             <h1 class="memory header">Memory description</h1>
