--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
+        <script src="./js/backButton.js"></script>
         <script src="./js/stopTransition.js"></script>
         <script src="./js/preventTabbing.js"></script>
         <script src="./js/firstFit.js"></script>
