--- a/views/scss/index.scss
+++ b/views/scss/index.scss
@@ -3,18 +3,36 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;    
-    font-family: sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
+
+@import 'fonts';
 
 body{
     overflow: hidden;
 }
 
 /* add holes */
+.back-button{
+    position: fixed;
+    background-image: url('../icons/icons8-back-24.png');
+    top: 4vh;
+    left: 2vw;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: 44% 50%;
+    border: 1px solid rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+    &:hover{
+        background-color:rgba(0, 0, 0, 0.4);
+    }
+}
+
 .forms{
-    // width: 200vw;
     position: relative;
-    
+    top: 70px;
 }
 
 .stop-transition{
@@ -97,6 +115,7 @@ body{
     width: 100%;
     text-align: center;
     position: static;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 input{
@@ -113,10 +132,19 @@ input::-webkit-inner-spin-button {
 
 button{
     display: block;
-    width: 85px;
+    width: 95px;
     height: 25px;
     margin: 10px auto;
-    color: black;
+    // background-image: linear-gradient(to right,#00bd45,#6209e8);
+    background-color: #6209e8;
+    color: white;
+    border-radius: 10px;
+    border: none ;
+    cursor: pointer;
+    &:disabled{
+        cursor: default;
+        color: #ccc;
+    }
 }
 
 .memory-output{
