--- a/views/scss/index.scss
+++ b/views/scss/index.scss
@@ -169,6 +169,8 @@ button{
 .memory-output{
     flex-basis: 65%;
     margin: 0 auto;
+    max-width: 480px;
+    padding: 0 20px;
 }
 
 .memory-output h1{
@@ -193,14 +195,16 @@ button{
 
 .memory-size-top{
     position: absolute;
-    top: -5px;
-    left: -30px;
+    top: 0;
+    left: -50px;
+    transform: translateY(calc(50%));
 }
 
 .memory-size-bottom{
     position: absolute;
-    bottom: -10px;
+    bottom: 0;
     left: -50px;
+    transform: translateY(calc(50%));
 }
 
 .process{
@@ -217,9 +221,11 @@ button{
 
 .memory-warning{
     flex-basis: 40%;
+    max-width: 375px;
     padding: 1em;
     background-color: #edff008c;
     border-radius: 20px;
+    margin: 0 auto;
 }
 
 .warning-p{
