--- a/views/scss/index.scss
+++ b/views/scss/index.scss
@@ -171,6 +171,7 @@ button{
     margin: 0 auto;
     max-width: 480px;
     padding: 0 20px;
+    order: 1;
 }
 
 .memory-output h1{
@@ -226,6 +227,7 @@ button{
     background-color: #edff008c;
     border-radius: 20px;
     margin: 0 auto;
+    order: 2;
 }
 
 .warning-p{
