--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
                 </div>
                 <div class="segments_info">
                     <h1 class="processes header">Segment <span id="segmenet_cnt">0</span></h1>
-                    <input type="text" id="segment_name" placeholder="Segments name" autofocus>
+                    <input type="text" id="segment_name" placeholder="Segment name" autofocus>
                     <input type="number" id="segment_size" placeholder="Segment size">
                     <button type="submit" id="segment_submit" disabled>Next</button>
                 </div>
