--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,8 +47,9 @@
             <h1 class="select_algo header">Select the algorithm</h1>
             <form id="algo_select">
                 <select id="algorithm">
-                    <option value="1">First fit algorithm</option>
-                    <option value="2">Best fit algorithm</option>
+                    <option value="1">First Fit Algorithm</option>
+                    <option value="2">Best Fit Algorithm</option>
+                    <option value="3">Worst Fit Algorithm</option>
                   </select>
                 <button type="submit" id="algorithm_submit">Draw</button>
             </form>
