--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,6 +2,7 @@
         <script src="./js/preventTabbing.js"></script>
         <script src="./js/firstFit.js"></script>
         <script src="./js/bestFit.js"></script>
+        <script src="./js/worstFit.js"></script>
         <script src="./js/displayOutput.js"></script>
         <script src="./js/drawMemory.js"></script>
         <script src="./js/deallocate.js"></script>
