--- a/views/scss/index.scss
+++ b/views/scss/index.scss
@@ -196,7 +196,7 @@ button{
 
 .memory-size-top{
     position: absolute;
-    top: 0;
+    top: -20px;
     left: -50px;
     transform: translateY(calc(50%));
 }
