--- a/views/css/index.css
+++ b/views/css/index.css
@@ -242,7 +242,7 @@ button:disabled {
 
 .memory-size-top {
   position: absolute;
-  top: 0;
+  top: -20px;
   left: -50px;
   -webkit-transform: translateY(calc(50%));
           transform: translateY(calc(50%));
