--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,9 @@
         </div>
         <div class="holes">
             <h1 class="holes header">Add holes</h1>
-            <h2 class="holes subheader"id="holes">Hole <span id="hole_num">0</span></h2>
+            
             <form class="holes__form" id="add_holes">
+                <h2 class="holes subheader"id="holes">Hole <span id="hole_num">0</span></h2>
                 <input type="number" id="hole_base" placeholder="The hole base" autofocus>
                 <input type="number" id="hole_size" placeholder="The hole size">
                 <button type="submit" id="holes_submit" disabled>Next</button>
@@ -31,12 +32,12 @@
             <form class="processes__form" id="processes">
                 <h1 class="processes header">Process <span id="process_cnt">0</span></h1>
                 <div class="segments_number">
-                    <h2 class="processes header">Segments Number</h2>
+                    <h2 class="processes subheader special-header">Segments Number</h2>
                     <input type="number" id="segments_number" placeholder="Segments number" autofocus>
                     <button type="button" id="segments_number_submit" disabled>Next</button>
                 </div>
                 <div class="segments_info">
-                    <h1 class="processes header">Segment <span id="segmenet_cnt">0</span></h1>
+                    <h1 class="processes subheader special-header">Segment <span id="segmenet_cnt">0</span></h1>
                     <input type="text" id="segment_name" placeholder="Segment name" autofocus>
                     <input type="number" id="segment_size" placeholder="Segment size">
                     <button type="submit" id="segment_submit" disabled>Next</button>
